--- a/node.js/feliciasFruit/index.html
+++ b/node.js/feliciasFruit/index.html
@@ -26,6 +26,9 @@ padding: 25px;
 margin: 25px;
 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 border-radius: 9px; /* 5px rounded corners */
+align-content: center;
+Background-color: black;
+color: white;
 }
 
 span {
@@ -38,29 +41,22 @@ float: left;
 
 <body>
 <div>
-<h1>Mega Corp</h1>
-<h5 id="title" class="style1">Department Totals Report</h5>
+<h1>Felicias Phone Fund</h1>
+<h5 id="title" class="style1">Fund Totals Report</h5>
+<p>Sell Phones, Make Funds </p>
 
-</div>
-
-
-
-<div>
-<h5 id="slogan" class="style1">ABC, Always Be Coding!</h5>
-<p id="sentence">CareeDevs is Life, and Life is CareerDevs</p>
-<span>Age: </span><p id="age">21</p>
 </div>
 
 <div>
     <h5>Phone Name </h5><span id="phoneName"></span><br>
     <h5>How many did we sell? </h5><span id="phoneSales"></span><br>
-    <h5>How much did each cost? </h5><span id="phonePrices"></span><br>
-    <h5>What were the totals? </h5><span id="phoneTotals"></span>
+    <h5>How much did each phone cost? </h5><span id="phonePrices"></span><br>
+    <h5>What is the totals? </h5><span id="phoneTotals"></span>
 </div>
 
 
 <script type="text/javascript" src="feliciasFruit.js" ></script>
-<button onclick="ayeHowMuchForThePhone();">Get Zip Help!</button>
+<button onclick="ayeHowMuchForThePhone();">Fund Information</button>
 </body>
 
 </html>
