--- a/htmlCssDom/index.html
+++ b/htmlCssDom/index.html
@@ -47,7 +47,7 @@
 
     <div>
         <h5 id="slogan" class="style1">ABC, Always Be Coding!</h5>
-        <p id="sentence">CareeDevs is Life, and Life is CareerDevs</p>
+        <p id="sentence">Listed Below is the total salaryinformation for Mega Corp </p>
         <span>Total Company Salaries: $</span><p id="companySalaryTotal">0000000</p>
 
     </div>
