Updated video index

--- a/htmlCssDom/eMoney/index.html
+++ b/htmlCssDom/eMoney/index.html
@@ -17,14 +17,14 @@
                         <input class="Search-input" type="text" placeholder="Seach eMoney">
                         <img id="mag-glass" src="https://image.flaticon.com/icons/svg/126/126474.svg">
                     </div>
-                    <ul class="no-dots">
-                        <li><a href="https://emoneyadvisor.com/products/">Products</a></li>
-                        <li><a href="https://emoneyadvisor.com/about-us/">About Us</a></li>
-                        <li><a href="https://emoneyadvisor.com/careers/">Careers</a></li>
-                        <li><a href="https://emoneyadvisor.com/resources/">Resources</a></li>
-                        <li><a href="https://emoneyadvisor.com/emoney-for-enterprise/">eMoney for Enterprises</a></li>
-                        <li><a href="https://emoneyadvisor.com/current-customers/">Current Customers</a></li>
-                    </ul>
+                    <div class="links-list">
+                        <a href="https://emoneyadvisor.com/products/">Products</a>
+                        <a href="https://emoneyadvisor.com/about-us/">About Us</a>
+                        <a href="https://emoneyadvisor.com/careers/">Careers</a>
+                        <a href="https://emoneyadvisor.com/resources/">Resources</a>
+                        <a href="https://emoneyadvisor.com/emoney-for-enterprise/">eMoney for Enterprises</a>
+                        <a href="https://emoneyadvisor.com/current-customers/">Current Customers</a>
+                    </div>
                     <div class="orange-button">
                             <a href="http://info.emoneyadvisor.com/emoney-advisor-trial"> 
                                 <img id="download" src="https://image.flaticon.com/icons/png/128/109/109612.png"> 
@@ -36,6 +36,7 @@
             </div>
 
         </div>
+
 
         <div class="body-container">
             <div class="video-container">
