parsing data from response

--- a/apis/XHR_AJAXe/index1.html
+++ b/apis/XHR_AJAXe/index1.html
@@ -33,8 +33,15 @@
                     var stuff = Object.entries(data);
                     console.log(typeof(data));
 console.log(typeof(Object.entries(data)));
-console.log(typeof(stuff));
- 
+console.log(data);
+///////////////// -----use data to crate array
+for (var i = 0; i < data.length; i++) {
+    console.log(data[i]);
+} 
+
+
+
+
 var publisher = result[0][1].author;
 console.log(publisher);
 
