--- a/apis/XHR_AJAXe/index1.html
+++ b/apis/XHR_AJAXe/index1.html
@@ -9,15 +9,17 @@
             <button id="loadTextFile">Click Here to Load File</button>
             <div id="loadTextHere"></div>
         </div>
+        <script type='text/javascript' src='keys.js'></script>
     <script>
         document.getElementById("loadTextFile").addEventListener('click', loadText);
 
-        function loadText() {
+        function loadText(config) {
             var xhrCall = new XMLHttpRequest();
-        //    const {apiKey} =  keys.installed;
+            console.log(config.apiKey);
+            const apiKey =  keys.apiKey;
             var url = 'https://newsapi.org/v2/top-headlines?' +
-          'country=us&' +
-          'apiKey=c1fc56b771f24b8f86c2a603d2286503';
+          'country=us&' + apiKey; 
+          console.log(url);
             xhrCall.open('GET', url, true);
             //console.log(xhrCall);
             
