--- a/apis/XHR_AJAXe/index2.html
+++ b/apis/XHR_AJAXe/index2.html
@@ -9,13 +9,14 @@
             <button id="loadTextFile">Click Here to Load File</button>
             <div id="loadTextHere"></div>
         </div>
+        <script type='text/javascript' src="keys.js"></script>
     <script>
         document.getElementById("loadTextFile").addEventListener('click', loadText);
 
-        function loadText() {
+        function loadText(keys) {
+            var apiKey = keys.apiKey
             var url = 'https://newsapi.org/v2/top-headlines?' +
-          'country=us&' +
-          'apiKey=c1fc56b771f24b8f86c2a603d2286503';
+          'country=us&' + apiKey;
 var req = new Request(url);
 fetch(req)
     .then(function(res) {
