api key undefined

--- a/apis/XHR_AJAXe/index2.html
+++ b/apis/XHR_AJAXe/index2.html
@@ -14,7 +14,8 @@
         document.getElementById("loadTextFile").addEventListener('click', loadText);
 
         function loadText(keys) {
-            var apiKey = keys.apiKey
+            var apiKey = keys.apiKey;
+            console.log("this is the api key", apiKey);
             var url = 'https://newsapi.org/v2/top-headlines?' +
           'country=us&' + apiKey;
 var req = new Request(url);
@@ -42,3 +43,4 @@ fetch(req)
     </body>
 </html>
 
+//API Key is coming up as undefined :(
