--- a/apis/XHR_AJAXe/index1.html
+++ b/apis/XHR_AJAXe/index1.html
@@ -98,6 +98,8 @@ render data inide elements
 
 //write html in variable to write in for loop
 
+//and why is data object so WEIRD?? CHECK data type
+
 
 
 -->
