converting var to let

--- a/apis/XHR_AJAXe/index1.html
+++ b/apis/XHR_AJAXe/index1.html
@@ -39,11 +39,11 @@ for (var i = 0; i < data.length; i++) {
     console.log(data[i]);
     var responseNum = data[i][0];
     //test Healdine
-    var title = data[i][1].title;
-    var author = data[i][1].author;
-    var img = data[i][1].urlToImage;
-    var description = data[i][1].description;
-    var url = data[i][1].url;
+    let title = data[i][1].title;
+    let author = data[i][1].author;
+    let img = data[i][1].urlToImage;
+    let description = data[i][1].description;
+    let url = data[i][1].url;
 
 
 var h1 = document.createElement("h1");
