redesigning DOM Elements

--- a/apis/XHR_AJAXe/index1.html
+++ b/apis/XHR_AJAXe/index1.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div>
-            <button id="loadTextFile">Click Here to Load File</button>
+            <input id="topic" type="text"><button id="loadTextFile">Click Here to Load File</button>
             <div id="loadTextHere">
                 <span id="showData">Show Articles</span>
             </div>
@@ -126,5 +126,10 @@ render data inide elements
 //and why is data object so WEIRD?? CHECK data type
 
 //include dynamic html to append to parent element
+
+-->
+
+<!--
+use XML HTTP Request to get data from news API
 
 -->
