--- a/WikiSearch/index.html
+++ b/WikiSearch/index.html
@@ -7,12 +7,17 @@
     <title>Wiki Search</title>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
-<body>
+<body onload="loadStyle()">
     <div id="main-container">
+        <div id="sub-container">
         <H2>Wiki Search</H2>
-        <input type="text" id="input" name="input">
+        <p id="warning"></p>
+        <input type="text" id="input" name="input"> 
         <button onclick="displayResult()" id="submit">Search</button>
-        <ol id="results"></ol>
+        </div>
+        <h4 id="topic"></h4>
+        <div id="res"></div>
+
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
